fixed horizontal scrollbar

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,6 +4,8 @@
   margin: 0 auto;
   padding: 1rem;
   background-color: white;
+  box-sizing: border-box;
+  height: auto;
 }
 
 .nyco {
@@ -22,6 +24,7 @@
   .container {
     background-color: white;
     width: 100%;
+    padding: 10px;
   }
 }
 
